<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.moe</groupId>
	<artifactId>tower-defense</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<description>Parent des projects td</description>
	<packaging>pom</packaging>

	<properties>
		<java.version>21</java.version>
		<maven.compiler.source>21</maven.compiler.source>
		<maven.compiler.target>21</maven.compiler.target>
		<maven.compiler.release>21</maven.compiler.release>
		<spring.boot.version>3.3.3</spring.boot.version>
	</properties>

	<modules>
		<module>td-level-editor</module>
		<module>td-engine</module>
		<module>td-console-viewer</module>
		<module>td-progression</module>
		<module>td-runner</module>
	</modules>
</project>